--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clock-widget",
   "version": "0.1.0",
   "private": true,
+  "main": "public/electron.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -13,6 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +36,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^7.1.0",
+    "electron": "^18.2.3",
+    "electron-builder": "^23.0.3",
+    "electron-is-dev": "^2.0.0",
+    "wait-on": "^6.0.1",
+    "moment": "^2.18.1",
+    "moment-duration-format": "^1.3.0",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0"
   }
 }
